Mobile ad with two slides animated with GSAP

--- a/index.html
+++ b/index.html
@@ -1,9 +1,70 @@
 <!doctype html>
 <html lang="en">
 	<head>
+		<title>Penny Mobile Ad</title>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Stellar Soft Mobile Ad</title>
+		<meta name="apple-mobile-web-app-title" content="Penny" />
+
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"
+		/>
+
+		<link rel="manifest" href="/site.webmanifest" />
+		<link rel="shortcut icon" href="/favicon.ico" />
+		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+		<link
+			rel="icon"
+			type="image/png"
+			href="/favicon-96x96.png"
+			sizes="96x96"
+		/>
+
+		<link
+			rel="apple-touch-icon"
+			sizes="180x180"
+			href="/apple-touch-icon.png"
+		/>
+
+		<link rel="preload" href="/bg.webp" as="image" />
+
+		<style>
+			:root {
+				--portrait-min-height: 480px;
+				--landscape-min-height: 860px;
+			}
+
+			#root {
+				display: flex;
+				height: 100dvh;
+				min-height: var(--portrait-min-height);
+				background-repeat: no-repeat;
+				background-size: cover;
+				background-position: center center;
+				background-image: url('/bg.webp');
+			}
+
+			body {
+				margin: 0;
+			}
+
+			img {
+				color: transparent;
+			}
+
+			@media screen and (orientation: landscape) {
+				#root {
+					min-height: var(--landscape-min-height);
+				}
+			}
+
+			@media screen and (orientation: portrait) {
+				body {
+					touch-action: none;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<div id="root"></div>
